// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`Page\` component should render correctly with \`className\` prop 1`] = `
<div
  className="page __CLASSNAME__"
>
  __CONTENT__
</div>
`;

exports[`\`Page\` component should render correctly with default props 1`] = `
<div
  className="page"
>
  __CONTENT__
</div>
`;
